2004-04-06  David Bateman  <dbateman@free.fr>

  	* DLD_FUNCTIONS/sort.cc: Use the new template sort class, adapt for
	N-d arrays, and allow optional dim argument.

	* DLD_FUNCTIONS/fftn.cc: Save result of transpose operation.
	Check for failure of transpose.

2004-04-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-bool.h (octave_bool::bool_array_value): New function.

	* ov-base-mat.cc (octave_base_matrix<MT>::subsasgn): Don't allow
	expressions like x(i)(j) or x(i){j} when x is empty.

	* load-save.cc (get_file_format): Error if file does not exist.
	(Fload): Also complain here if specific file type is specified and
	file does not exist.

2004-04-02  Quentin Spencer  <qspencer@ieee.org>

	* parse.y: Use persistent instead of static in warnings messages.

2004-04-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-decl.cc (tree_static_command::do_init): Initialize to empty
	matrix by default.

2004-04-02  David Bateman  <dbateman@free.fr>

	* ov-re-mat.cc (octave_matrix::convert_to_str_internal):
	Return charNDArray.
	* ov-bool-mat.cc (octave_bool_matrix::convert_to_str_internal):
	Call array_value.
	
	* DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/betainc.cc,
	DLD-FUNCTIONS/gammainc.cc, DLD-FUNCTIONS/minmax.cc,
	DLD-FUNCTIONS/filter.cc:
	Convert for N-d array, better Matlab compatibility.

	* load-save.cc (Fload): Better handling of non existent files.
	
2004-03-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-list.cc (octave_list::subsref): Correctly create return value.
	Return comma-separate list if {-style indexing extracts more than
	one value.

2004-03-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cell.cc (octave_cell::save_hdf5): Handle empty cells.
	(octave_cell::load_hdf5): Likewise.

2004-03-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-base-mat.cc (octave_base_matrix<MT>::subsasgn): If empty,
	allow type conversion when indexing with "{" and ".".

2004-03-10  John W. Eaton  <jwe@bevo.che.wisc.edu>
