@@ -149,7 +149,8 @@ octave_base_matrix<MT>::do_index_op (const octave_value_list& idx,
       {
 	idx_vector i = idx (0).index_vector ();
 
-	retval = MT (matrix.index (i, resize_ok, MT::resize_fill_value ()));
+	if (! error_state)
+	  retval = MT (matrix.index (i, resize_ok, MT::resize_fill_value ()));
       }
       break;
 
@@ -158,20 +159,31 @@ octave_base_matrix<MT>::do_index_op (const octave_value_list& idx,
 	if (n_idx == 2 && nd == 2)
 	  {
 	    idx_vector i = idx (0).index_vector ();
-	    idx_vector j = idx (1).index_vector ();
 
-	    retval = MT (matrix.index (i, j, resize_ok,
-				       MT::resize_fill_value ()));
+	    if (! error_state)
+	      {
+		idx_vector j = idx (1).index_vector ();
+
+		if (! error_state)
+		  retval = MT (matrix.index (i, j, resize_ok,
+					     MT::resize_fill_value ()));
+	      }
 	  }
 	else
 	  {
 	    Array<idx_vector> idx_vec (n_idx);
 
 	    for (int i = 0; i < n_idx; i++)
-	      idx_vec(i) = idx(i).index_vector ();
+	      {
+		idx_vec(i) = idx(i).index_vector ();
 
-	    retval = MT (matrix.index (idx_vec, resize_ok,
-				       MT::resize_fill_value ()));
+		if (error_state)
+		  break;
+	      }
+
+	    if (! error_state)
+	      retval = MT (matrix.index (idx_vec, resize_ok,
+					 MT::resize_fill_value ()));
 	  }
       }
       break;
